<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EP Mobile</string>
    <string name="about_text">EP Mobile is a package of
		useful cardiac electrophysiology
		tools for your Android phone or tablet.
		These tools are for reference purposes only
		and are not meant to substitute for clinical judgment.
		If you have suggestions or comments, please contact us.
		\n\nEmail: mannd@epstudiossoftware.com
		\nWeb: www.epstudiossoftware.com
		\nSource: github.com/mannd/epmobile
		\n\nCopyright \u00a9 2011-2015 EP Studios, Inc.
		\nLicensed under GNU GPL v3.</string>
    <string name="main_index_title">EP Mobile</string>
    <string name="about_label">About</string>
    <string name="about_title">About EP Mobile</string>
    <string name="interval_rate_title">Use RR Interval or Heart Rate</string>
    <string name="interval_rate_summary">Use RR interval or heart rate as default</string>
    <string name="calculate_label">Calculate!</string>
    <string name="clear_label">Clear</string>
    <string name="qtc_formula_title">Default QTc Formula</string>
    <string name="qtc_formula_summary">Select the default QTc formula</string>
    <string name="maximum_qtc_title">Maximum QTc</string>
    <string name="maximum_qtc_summary">Enter the maximum QTc in msec</string>
    <string name="maximum_qtc_message">This value in msec is used to
		color code (with red) abnormally high QTc values</string>
    <string name="maximum_qtc_default_value">440</string>
    <string name="default_warfarin_tablet_title">Default Warfarin Tablet</string>
    <string name="default_warfarin_tablet_summary">Select the default warfarin tablet strength</string>
    <string name="default_inr_target_title">Default INR Target</string>
    <string name="default_inr_target_summary">Default INR target range</string>
    <string name="broad_r">R > 30 msec in V1 or V2</string>
    <string name="broad_rs">Onset to nadir S > 60 msec in V1 or V2</string>
    <string name="notched_s">Notched or slurred S in V1 or V2</string>
    <string name="q_v6">QR or QS in V6</string>
    <string name="monophasic_r_v1">Monophasic R in V1</string>
    <string name="qr_v1">QR in V1</string>
    <string name="rs_v1">RS in V1</string>
    <string name="deep_s_v6">R to S ratio &lt; 1 in V6</string>
    <string name="monophasic_r_v6">Monophasic R in V6</string>
    <string name="basic_intervals_label">Basic Conduction Intervals</string>
    <string name="sinus_node_label">Sinus Node Function</string>
    <string name="refractory_periods_label">Refractory Periods and Block Cycle Lengths</string>
    <string name="normal_ep_values_reference">Reference: Josephson ME. Clinical Cardiac
		Electrophysiology. Techniques and Interpretations. 2nd Edition 1993.
		Lea &amp; Febiger.</string>
    <string name="global_dysfunction_label">I. Global or regional dysfunction and structural
		alterations</string>
    <string name="major">MAJOR</string>
    <string name="minor">MINOR</string>
    <string name="by_echo_label">By 2D echo:</string>
    <string name="regional_echo_abnormality_label">Regional RV akinesia, dyskinesia, or aneurysm</string>
    <string name="regional_echo_minor_abnormality_label">Regional RV akinesia or dyskinesia</string>
    <string name="regional_mri_abnormality_label">Regional RV akinesia or dyssynchronous RV
		contraction</string>
    <string name="and_one_echo_label">and one of the following (end diastole)…</string>
    <string name="and_one_label">and one of the following…</string>
    <string name="major_plax_criteria">PLAX RVOT \u2265 32 mm (corrected for body size
		[PLAX/BSA] \u2265 19 mm/m\u00b2)</string>
    <string name="major_psax_criteria">PSAX RVOT \u2265 36 mm (corrected for body size
		[PSAX/BSA] \u2265 21 mm/m\u00b2)</string>
    <string name="fractional_area_criteria">fractional area change \u2264 33%</string>
    <string name="minor_plax_criteria">PLAX RVOT \u2265 29 to \u003c 32 mm (corrected for
		body size
		[PLAX/BSA] \u2265 16 to \u003c 19 mm/m\u00b2)</string>
    <string name="minor_psax_criteria">PSAX RVOT \u2265 32 to \u003c 36mm (corrected for
		body size
		[PSAX/BSA] \u2265 18 to \u003c 21 mm/m\u00b2)</string>
    <string name="fractional_area_minor_criteria">fractional area change \u003e 33%
		and \u2264 40%</string>
    <string name="by_mri_label">By MRI:</string>
    <string name="major_mri_volume_criteria">Ratio of RV end-diastolic volume to BSA \u2265 110
		mL/m\u00b2
		(male) or \u2265 100 mL/m\u00b2 (female)</string>
    <string name="major_mri_ef_criteria">RV ejection fraction \u2264 40%</string>
    <string name="minor_mri_volume_criteria">Ratio of RV end-diastolic volume to BSA \u2265 100
		to
		\u003c 110 mL/m\u00b2 (male) or \u2265 90 to \u003c 100 mL/m\u00b2 (female)</string>
    <string name="minor_mri_ef_criteria" formatted="false">RV ejection fraction \u003e 40% to \u2264 45%</string>
    <string name="by_rv_angio_label">By RV Angiography:</string>
    <string name="tissue_label">II. Tissue characterization of wall</string>
    <string name="major_residual_myocytes_label" formatted="false">Residual myocytes \u003c 60% by morphometric
		analysis (or \u003c 50% if estimated) with fibrous replacement of RV
		free wall myocardium in \u2265 1 sample, with or without fatty
		replacement of tissue on endomyocardial biopsy</string>
    <string name="minor_residual_myocytes_label" formatted="false">Residual myocytes 60% to 75% by morphometric
		analysis (or 50% to 65% if estimated) with fibrous replacement of RV
		free wall myocardium in \u2265 1 sample, with or without fatty
		replacement of tissue on endomyocardial biopsy</string>
    <string name="repolarization_label">III. Repolarization abnormalities</string>
    <string name="major_repolarization_label">TWI (V1, V2, and V3) or beyond in
	individuals \u003e 14 yrs (in absence of complete RBBB)</string>
    <string name="minor_repolarization_no_rbbb_label">TWI in V1 and V2
	in individuals \u003e 14 yrs (in absence of complete RBBB) or in V4, V5, V6</string>
    <string name="minor_repolarization_rbbb_label">TWI in V1-V4 in
	individuals \u003e 14 yrs in presence of complete RBBB</string>
    <string name="depolarization_label">IV. Depolarization/conduction abnormalities</string>
    <string name="major_depolarization_label">Epsilon wave (reproducible low-amp signals between
	end of QRS complex to onset of T wave) in right precordial leads (V1-V3)</string>
    <string name="saecg_label">LP by SAECG in \u2265 1 of 3 parameters in 
	absence of QRS duration of \u2265 110 msec on standard ECG</string>
    <string name="filtered_qrs_label">Filtered QRS duration (fQRS) \u2265 114 msec</string>
    <string name="duration_terminal_qrs_label">Duration of terminal QRS \u003c 40 \u03bcV
	(low-amplitude signal duration) \u2265 38 msec</string>
    <string name="root_mean_square_label">Root-mean-square voltage of terminal 40 msec \u2264 20 \u03bcV</string>
    <string name="terminal_activation_label">Terminal activation duration</string>
    <string name="terminal_activation_duration_label">Terminal activation duration of QRS
	\u2265 55 msec measured from the nadir of the S wave to the end of the QRS including
	R\', in V1, V2, or V3, in the absence of complete RBBB</string>
    <string name="arrhythmias_label">V. Arrhythmias</string>
    <string name="major_arrhythmias_label">Nonsustained or sustained VT of LBBB morphology
	with superior axis (negative or indeterminate QRS in leads II, III, and aVF and
	positive in lead aVL)</string>
    <string name="rvot_vt_label">Nonsustained or sustained VT of RV outflow configuration,
	LBBB morphology with inferior axis (positive QRS in leads II, III, and aVF and negative
	in lead aVL) or of unknown axis</string>
    <string name="pvcs_label">\u003e 500 ventricular extrasystoles per 24 hours (Holter)</string>
    <string name="family_history_label">VI. Family history</string>
    <string name="first_degree_relative_label">ARVC/D confirmed in a first-degree relative
	who meets current Task Force criteria</string>
    <string name="pathology_label">ARVC/D confirmed pathologically at autopsy or surgery 
	in a first-degree relative</string>
    <string name="genetic_label">Identification of a pathogenic mutation categorized
	as associated or probably associated with ARVC/D in the patient under evaluation</string>
    <string name="possible_family_history_label">History of ARVC/D in a first-degree
	relative in whom it is not possible or practical to determine whether the family
	member meets current Task Force criteria</string>
    <string name="family_history_sudden_death_label">Premature sudden death (\u003c 35
	years of age) due to suspected ARVC/D in a first-degree relative</string>
    <string name="second_degree_relative_label">ARVC/D confirmed pathologically or by 
	current Task Force Criteria in a second-degree relative</string>
    <string name="arvc_key">BSA = body surface area. PLAX = parasternal long
		axis view. PSAX = parasternal short
		axis view. RVOT = RV outflow tract.</string>
    <string name="arvc_reference">Reference: Marcus FI et al. Circulation
		2010;121:1533.
		http://circ.ahajournals.org/content/121/13/1533.long</string>
    <string name="qtc_settings">QTc Calculator Settings</string>
    <string name="warfarin_settings">Warfarin Settings</string>
    <string name="drug_calculator_settings">Other Calculator Settings</string>
    <string name="default_weight_unit_title">Default Weight Unit</string>
    <string name="default_weight_unit_summary">Select default unit for weight</string>
    <string name="ah">AH</string>
    <string name="ah_normal">50–125 msec</string>
    <string name="hv">HV</string>
    <string name="hv_normal">35–55 msec</string>
    <string name="h_duration">H duration</string>
    <string name="h_duration_normal">10–25 msec</string>
    <string name="sact">SACT</string>
    <string name="sact_normal">45–125 msec</string>
    <string name="csnrt">Corrected SNRT</string>
    <string name="csnrt_normal">&lt;550 msec</string>
    <string name="srt_scl">SNRT/SCL%</string>
    <string name="srt_scl_normal">&lt;150%</string>
    <string name="aerp">Atrial ERP</string>
    <string name="aerp_normal">170–300 msec</string>
    <string name="avn_bcl">AV Node Block CL</string>
    <string name="avn_bcl_normal">350–500 msec</string>
    <string name="avn_erp">AV Node ERP</string>
    <string name="avn_erp_normal">230–425 msec</string>
    <string name="avn_frp">AV Node FRP</string>
    <string name="avn_frp_normal">300–525 msec</string>
    <string name="hps_erp">HPS ERP</string>
    <string name="hps_erp_normal">330–450 msec</string>
    <string name="verp">Ventricular ERP</string>
    <string name="verp_normal">170–290 msec</string>
    <string name="default_creatinine_unit_title">Default Creatinine Unit</string>
    <string name="default_creatinine_unit_summary">Select default unit for creatinine</string>
    <string name="default_height_unit_title">Default Height Unit</string>
    <string name="default_height_unit_summary">Select default unit for height</string>
    <string name="qtc_formula_key">qtc_formula</string>
    <string name="maximum_qtc_key">maximum_qtc</string>
    <string name="qtc_formula_default_value">BAZETT</string>
    <string name="interval_rate_default_value">RATE</string>
    <string name="interval_rate_key">interval_rate</string>
    <string name="warfarin_tablet_default_value">2</string>
    <string name="warfarin_tablet_key">default_warfarin_tablet</string>
    <string name="inr_target_default_value">0</string>
    <string name="inr_target_key">default_inr_target</string>
    <string name="weight_unit_default_value">KG</string>
    <string name="weight_unit_key">default_weight_unit</string>
    <string name="height_unit_default_value">CM</string>
    <string name="height_unit_key">default_height_unit</string>
    <string name="creatinine_unit_default_value">MG</string>
</resources>